--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "BFF for searching products with MercadoLibre's API",
   "main": "app.js",
+  "engines": {
+    "node": "14.13.1"
+  },
   "scripts": {
     "start": "nodemon -r esm app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
