--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
   "engines": {
     "node": "14.13.1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fervailanti/expomeli-api"
+  },
   "scripts": {
-    "start": "nodemon -r esm app.js",
+    "dev": "nodemon -r esm app.js",
+    "start": "node -r esm app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Fernando Vailanti",
