--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "url": "https://github.com/fervailanti/expomeli-api"
   },
   "scripts": {
-    "dev": "nodemon -r esm app.js",
-    "start": "node -r esm app.js",
+    "start:dev": "nodemon -r esm app.js",
+    "start:prod": "node -r esm app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Fernando Vailanti",
